--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ div{
 }
 
 h1{
-    background-color: pink;
+    background-color: rgb(241, 95, 120);
     width: 100px;
     text-align: center;
     border-width: 5px;
