--- a/boxmodelpractice.css
+++ b/boxmodelpractice.css
@@ -5,6 +5,7 @@
     border-radius: 5px;
     border-style: solid;
     text-align: center;
+    text-decoration: solid;
 }
 img {
     width: 200px;
