--- a/morecss.css
+++ b/morecss.css
@@ -23,14 +23,14 @@ div{
 }
 #absolute
 {
-    position:relative;
+    position:static;
 }
 #absolute #middle{
     position: absolute;
     top: 20px;
     left:65px;
 }
-#fixed #middle
+#fixed 
 {
     position:fixed;
     top:0px;
