--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,10 +7,10 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>The Home Page</h1>
+    <h1>The Home Page <%=4+5+1%></h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni mollitia iste vitae debitis molestiae possimus nihil quod reiciendis deleniti inventore non id eveniet voluptates consequuntur quae quo et, consequatur excepturi?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste unde possimus esse? Quasi nam odit explicabo laborum facilis doloremque, molestiae veniam ea eos quis. Corporis, soluta. Voluptatem expedita magnam dicta?</p>
-    
+
     
 </body>
 </html>
